--- a/index.html
+++ b/index.html
@@ -2,12 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Resturant</title>
     <link href="css/stylesheet.css" rel="stylesheet"/>
-
-    
 </head>
 <body>
- 
+    <header>
+        <h1>Welcome to our Resturant</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li>Menu</li>
+                <li><a href="misc/about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </article>
+        <article>
+            <h3>Menu</h3>
+            <p>Breafast</p>
+                <ul>
+                    <li>Sweet</li>
+                    <li>Savory</li>
+                    <img>
+                </ul>
+            <p>Lunch</p>
+        </article>
+    </main> 
 </body>
 </html>
