added pancakes and pizza images

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         <article>
             <h3>Menu</h3>
             <p>Breafast</p>
-                <ul>
+                <ul id='secondlist'>
                     <li>Sweet</li>
                     <li>Savory</li>
-                    <img>
                 </ul>
+                <img src="images/pancake.jpg">
             <p>Lunch</p>
+                <img src="images/pizza.jpg">
         </article>
     </main> 
 </body>
