--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
             </p>
         </article>
         <article>
-            <h3>Menu</h3>
+            <h2>Menu</h2>
             <p>Breafast</p>
-                <ul id='secondlist'>
+                <ul style="color: teal;">
                     <li>Sweet</li>
                     <li>Savory</li>
                 </ul>
-                <img src="images/pancake.jpg">
+                <img src="images/pancake.jpg" alt="picture of pancakes" >
             <p>Lunch</p>
-                <img src="images/pizza.jpg">
+                <P><img src="images/pizza.jpg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</P>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa enim nec dui nunc mattis enim ut tellus. Aliquam id diam maecenas ultricies mi eget. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Egestas congue quisque egestas diam in. Diam maecenas ultricies mi eget mauris pharetra. Interdum varius sit amet mattis vulputate. Auctor urna nunc id cursus metus aliquam eleifend mi in. Orci phasellus egestas tellus rutrum. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum.</p>
         </article>
     </main> 
 </body>
