--- a/misc/about.html
+++ b/misc/about.html
@@ -21,6 +21,7 @@
             <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet mauris commodo quis imperdiet. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus. Eu tincidunt tortor aliquam nulla facilisi. Lorem donec massa sapien faucibus et molestie. Dui nunc mattis enim ut. Vel pharetra vel turpis nunc eget. Commodo nulla facilisi nullam vehicula. Neque convallis a cras semper auctor neque vitae. Posuere ac ut consequat semper viverra nam libero. Ligula ullamcorper malesuada proin libero nunc. Lacinia quis vel eros donec ac odio tempor orci dapibus. Varius vel pharetra vel turpis nunc. Viverra mauris in aliquam sem fringilla. Vel facilisis volutpat est velit egestas.</p>
+            <img src="../images/restaurant.jpg" >
         </article>
     </main>
 
